<resources>
    <string name="app_name">puhon_sample</string>
    <string name="triangle">TODO</string>
    <string name="title">puhon</string>
    <string name="stars">TODO</string>
    <string name="tagline">today, we choose to keep going.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">login</string>
    <string name="jup">TODO</string>
    <string name="tagline2">Glad to see you here!</string>
    <string name="age">Age</string>
    <string name="pronouns">Pronouns</string>
    <string name="email3">Email</string>
    <string name="name">Name</string>
    <string name="password2">Password</string>
    <string name="loginD">TODO</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email2">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login2">Login</string>
    <string name="spacedesign">TODO</string>
    <string name="jupiter">TODO</string>
    <string name="get_started">GET STARTED</string>
    <string name="hey_your_feelings_are_valid">Hey, your feelings are valid.</string>
    <string name="text">Some days will be harder to get up to, some days will be unusual. But you are free to keep going anyway. Let genuine days remind you, you are more than what is behind you.</string>
    <string name="mainmenudesign">TODO</string>
    <string name="menuquote">Quote of the day:</string>
    <string name="menutext">Because when we give too many fucks, when we choose to give a fuck about everything, then we feel as though we are perpetually entitled to feel comfortable and happy at all times, that\'s when life fucks us.</string>
    <string name="author">- Mark Manson</string>
    <string name="home_button">TODO</string>
    <string name="reminders">TODO</string>
    <string name="settings">TODO</string>
    <string name="moods">MOODS</string>
    <string name="goals">GOALS</string>
    <string name="view_progress">VIEW PROGRESS</string>
    <string name="daily_mood">DAILY MOOD</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>